第一次提交GitHub

--- a/doc/empty/locales/cn.json
+++ b/doc/empty/locales/cn.json
@@ -2,11 +2,11 @@
 	"__v": "简体中文语言包",
 	"Username": "用户名",
 	"Password": "密码",
-	"Log on": "登陆",
-	"Login": "登陆",
+	"Log on": "登录",
+	"Login": "登录",
 	"Logout": "退出",
 	"Dashboard": "控制面板",
-	"Help": "登陆",
+	"Help": "登录",
 	"Account": "个人中心",
 	"Sign out": "退出",
 	"Before you can access this requested page you first need to login.": "该页面需要登陆才能访问",
