--- a/doc/empty/locales/en.json
+++ b/doc/empty/locales/en.json
@@ -1,2 +1,115 @@
-{	
+{
+  "__en": "English",
+  "Username": "Username",
+  "Password": "Password",
+  "Log on": "Log on",
+  "Login": "Login",
+  "Logout": "Logout",
+  "Dashboard": "Dashboard",
+  "Help": "Help",
+  "Account": "Account",
+  "Sign out": "Sign out",
+  "Before you can access this requested page you first need to login.": "Before you can access this requested page you first need to login.",
+  "Wrong username of password, please try again.": "Wrong username of password, please try again.",
+  "Your username is blocked, please take contact with your site builder.": "Your username is blocked, please take contact with your site builder.",
+  "OK": "OK",
+  "Cancel": "Cancel",
+  "Add": "Add",
+  "Rename": "Rename",
+  "Delete": "Delete",
+  "Edit": "Edit",
+  "login-successful": "login-successful",
+  "Add a web page": "Add a web page",
+  "Show": "Show",
+  "Own content": "Own content",
+  "Content of first subitem": "Content of first subitem",
+  "Add new page": "Add new page",
+  "page": "page",
+  "Page Title": "Page Title",
+  "View Page": "View Page",
+  "View": "View",
+  "Content": "Content",
+  "SEO": "SEO",
+  "Options": "Options",
+  "Main": "Main",
+  "Keywords": "Keywords",
+  "Description": "Description",
+  "Active": "Active",
+  "Date": "Date",
+  "Valid": "Valid",
+  "to": "to",
+  "Save": "Save",
+  "Intro": "Intro",
+  "Add Content": "Add Content",
+  "Link": "Link",
+  "Needs login": "Needs login",
+  "Valid from": "Valid from",
+  "Order sublevels": "Order sublevels",
+  "Allowed Domains": "Allowed Domains",
+  "add a group": "add a group",
+  "Last Modified": "Last Modified",
+  "Add Rich text": "Add Rich text",
+  "Add plain": "Add plain",
+  "Add image": "Add image",
+  "Add file": "Add file",
+  "Add user form": "Add user form",
+  "Add facebook like": "Add facebook like",
+  "Add facebook share": "Add facebook share",
+  "Add page params": "Add page params",
+  "New content block": "New content block",
+  "Move": "Move",
+  "Add Folder": "Add Folder",
+  "Add Image": "Add Image",
+  "Images": "Images",
+  "Layout": "Layout",
+  "Website": "Website",
+  "Pages": "Pages",
+  "Name": "Name",
+  "Info": "Info",
+  "Note": "Note",
+  "Extension": "Extension",
+  "Image": "Image",
+  "Preview": "Preview",
+  "Created": "Created",
+  "The item has been deleted.": "The item has been deleted.",
+  "Add File": "Add File",
+  "Extention": "Extention",
+  "Current": "Current",
+  "Change": "Change",
+  "Add Form": "Add Form",
+  "Add Item": "Add Item",
+  "Warn email": "Warn email",
+  "Button": "Button",
+  "Type": "Type",
+  "Default value": "Default value",
+  "Min / Length": "Min / Length",
+  "Max / Lines": "Max / Lines",
+  "Required": "Required",
+  "Validation": "Validation",
+  "No": "No",
+  "Email": "Email",
+  "Phone": "Phone",
+  "Whole number": "Whole number",
+  "Allow decimals": "Allow decimals",
+  "Label": "Label",
+  "Choices": "Choices",
+  "Naam": "Naam",
+  "Domain": "Domain",
+  "Level": "Level",
+  "Group": "Group",
+  "Choose an existing group or type a new one": "Choose an existing group or type a new one",
+  "Bad logins": "Bad logins",
+  "Max allowed": "Max allowed",
+  "Allows Mail": "Allows Mail",
+  "Leave empty if you don't want to change your password.": "Leave empty if you don't want to change your password.",
+  "New": "New",
+  "System": "System",
+  "Controller": "Controller",
+  "Render": "Render",
+  "Yes": "Yes",
+  "Render file": "Render file",
+  "Default child": "Default child",
+  "No children": "No children",
+  "Allowed children": "Allowed children",
+  "Duplicate": "Duplicate"
 }
