--- a/doc/empty/locales/cn.json
+++ b/doc/empty/locales/cn.json
@@ -8,8 +8,10 @@
 	"Dashboard": "控制面板",
   	"Help Center": "帮助中心",
 	"Account": "个人中心",
-	"Sign out": "退出",
-	"Before you can access this requested page you first need to login.": "该页面需要登陆才能访问",
+	"Sign out": "退 出",
+    "Now user:": "当前用户：",
+    "Forgot password": "忘记密码",
+	"Before you can access this requested page you first need to login.": "该页面需要登录才能访问",
 	"Wrong username of password, please try again.": "用户名或密码错误，请重试。",
 	"Your username is blocked, please take contact with your site builder.": "你的用户名被锁定，请联系站长",
 	"OK": "确认",
@@ -18,7 +20,7 @@
 	"Rename": "重命名",
 	"Delete": "删除",
 	"Edit": "编辑",
-	"login-successful": "登陆成功",
+	"login-successful": "登录成功",
 	"Add a web page": "添加新页面",
 	"Show": "显示方式",
 	"Own content": "独立页面",
@@ -42,7 +44,7 @@
 	"Intro": "介绍",
 	"Add Content": "添加内容",
 	"Link": "链接",
-	"Needs login": "需要登陆",
+	"Needs login": "需要登录",
 	"Valid from": "验证表单",
 	"Order sublevels": "排序",
 	"Allowed Domains": "权限范围",
@@ -98,7 +100,7 @@
 	"Level": "等级",
 	"Group": "用户组",
 	"Choose an existing group or type a new one": "选择一个存在的组或者创建一个",
-	"Bad logins": "错误登陆次数",
+	"Bad logins": "错误登录次数",
 	"Max allowed": "最大次数",
 	"Allows Mail": "启用邮件",
 	"Leave empty if you don't want to change your password.": "不想修改密码可以为空",
